--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "date-fns": "^2.29.3"
   },
   "devDependencies": {
+    "eslint": "^8.26.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "parcel": "^2.7.0"
   }
 }
