Добавляет работу с куки через библиотеку js-cookie

--- a/weather/package.json
+++ b/weather/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "date-fns": "^2.29.3"
+    "date-fns": "^2.29.3",
+    "js-cookie": "^3.0.1"
   },
   "devDependencies": {
     "parcel": "^2.7.0"
