--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "is-symbol": "^1.0.4",
     "is-weakref": "^1.0.2",
     "isexe": "^2.0.0",
+    "js-cookie": "^3.0.1",
     "js-sdsl": "^4.1.5",
     "js-tokens": "^4.0.0",
     "js-yaml": "^4.1.0",
