--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,3 @@
-# Ignore the node_modules directory
-node_modules/
-
-# Ignore Logs
-logs
-*.log
-
-# Ignore the build directory
-/dist
-
-# The file containing environment variables 
-.env
-
-# Ignore IDE specific files
-.idea/
-.vscode/
-*.sw*
-.parcel-cache/
+node_modules
+.parcel-cache
+dist
