--- a/package.json
+++ b/package.json
@@ -1,31 +1,25 @@
 {
-	"name": "weather-app",
-	"version": "1.0.0",
-	"description": "weather-app",
-	"main": "index.js",
-	"scripts": {
-		"start": "parcel src/index.html -p 3002 --open",
-		"build:parcel": "parcel build ./src/index.html --public-url ./ --no-source-maps",
-		"build": "npm run clean && npm run build:parcel",
-		"clean": "rm -rf dist/*",
-		"lint": "eslint index.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/Strada1/details-1.git"
-	},
-	"author": "Nikita",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/Strada1/details-1/issues"
-	},
-	"homepage": "https://github.com/Strada1/details-1#readme",
-	"devDependencies": {
-		"eslint": "^8.26.0",
-		"parcel": "^2.7.0",
-		"prettier": "^2.7.1"
-	},
-	"dependencies": {
-		"date-fns": "^2.29.3"
-	}
+  "name": "details-1",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Strada1/details-1.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Strada1/details-1/issues"
+  },
+  "homepage": "https://github.com/Strada1/details-1#readme",
+  "dependencies": {
+    "date-fns": "^2.29.3"
+  },
+  "devDependencies": {
+    "parcel": "^2.7.0"
+  }
 }
