--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "parcel": "^2.7.0"
+  },
+  "dependencies": {
+    "date-fns": "^2.29.3"
   }
 }
