--- a/weatherApp/package.json
+++ b/weatherApp/package.json
@@ -12,6 +12,11 @@
     "date-fns": "^2.29.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "eslint": "^8.26.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "parcel": "^2.7.0"
   }
 }
