--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "count date from input date to now",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel index.html"
   },
   "author": "DimaSU2020",
   "license": "ISC",
