--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "count date from input date to now",
   "main": "main.js",
   "scripts": {
+    "cleanup": "rm -rf .parcel-cache dist",
+    "dev": "npm run cleanup && parcel ./index.html",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html"
   },
@@ -13,6 +15,11 @@
     "date-fns": "^2.29.3"
   },
   "devDependencies": {
+    "eslint": "^8.26.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.4.0",
+    "eslint-plugin-promise": "^6.1.1",
     "parcel": "^2.7.0"
   }
 }
