--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.26.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "parcel": "^2.7.0"
   },
   "dependencies": {
