--- a/Chat/package.json
+++ b/Chat/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "date-fns": "^2.29.3",
     "eslint": "^8.27.0",
-    "parcel": "^2.8.0"
+    "parcel": "^2.8.0",
+    "process": "^0.11.10"
   }
 }
