--- a/Chat/package.json
+++ b/Chat/package.json
@@ -1,30 +1,20 @@
 {
   "name": "chat",
   "version": "1.0.0",
-  "description": "Chat",
-  "main": "index.js",
+  "description": "Чат",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Strada1/details-1/tree/meVarensev/details-38/Chat"
-  },
-  "author": "meVarensev",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Strada1/details-1/issues"
-  },
-  "homepage": "https://github.com/Strada1/details-1/blob/meVarensev/details-38/Chat/README.md",
-  "devDependencies": {
-    "eslint": "^8.27.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "parcel": "^2.8.0"
-  },
   "dependencies": {
+    "@types/js-cookie": "^3.0.2",
     "date-fns": "^2.29.3",
-    "js-cookie": "^3.0.1"
+    "js-cookies": "^1.0.4"
+  },
+  "devDependencies": {
+    "parcel": "^2.8.0"
   }
 }
