--- a/chat/package.json
+++ b/chat/package.json
@@ -18,8 +18,10 @@
 	"homepage": "https://github.com/Strada1/details-1#readme",
 	"devDependencies": {
 		"@parcel/transformer-sass": "^2.8.0",
+		"@types/js-cookie": "^3.0.2",
 		"parcel": "^2.8.0",
-		"tailwindcss": "^3.2.4"
+		"tailwindcss": "^3.2.4",
+		"typescript": "^4.9.3"
 	},
 	"dependencies": {
 		"date-fns": "^2.29.3",
