--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "parcel": "^2.8.0"
   },
   "dependencies": {
+    "cookie": "^0.5.0",
     "date-fns": "^2.29.3",
     "js-cookie": "^3.0.1"
   }
